# SUCCESS-archive

./: CMakeLists.txt  README.md  prototype  sample-env.json
SUCCESS-v0.1.10/: .gitattributes  .gitignore  README.md
SUCCESS-v0.1.10/include/: pthread.h  sqlite-vec.h
SUCCESS-v0.1.10/src/: Makefile  curses.c  main.c  nfd_test.c
SUCCESS-v0.1.10/src/app/: curses.exe - Shortcut.lnk
SUCCESS-v0.1.10/src/db/: .session  resources.db  todos.db  users.db
SUCCESS-v0.1.10/src/features/: ai_chat.c  ai_chat.h  flashcard.c  flashcard.h  quiz.c  quiz.h  social_hall.c  social_hall.h  study_timer.c  study_timer.h  todo.c  todo.h
SUCCESS-v0.1.10/src/gemini_api/: gemini_request.c  get_file_uri.c
SUCCESS-v0.1.10/src/pages/: introduction.c  introduction.h  menu.c  menu.h  tools.c  tools.h
SUCCESS-v0.1.10/src/types/: types.h
SUCCESS-v0.1.10/src/utils/: delay.c  gemini_loading.c  gemini_loading.h  get_file_mime_type.c  get_file_mime_type.h  grep_string.c  read_file_b64.c  replace_escaped_ansii.c
SUCCESS-v0.7/: Makefile  base64.c  base64.h  compile_flags.txt  file_api.sh  file_info.json  function_calling  function_calling.c  gemini_api_curl.sh  headers.txt  prototype.c  response.json  set_call_type_declaration.json  upload-header.tmp
SUCCESS-v0.7/SUCCESS-v0.8/src/: clay_sample.c
SUCCESS-v0.8/: env.json  function_calling
SUCCESS-v0.8/lib/: nfd.lib
SUCCESS-v0.8/src/: main.c  prototype.c
readme/: success.md
src/: Makefile  curses.c
src/pages/: introduction.c  introduction.h
src/types/: types.h
src/utils/: grep_string.h  read_file_b64.h  replace_escaped_ansii.h
(+10 files in other folders)
